kustomize_fastapi/fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-fastapi
  namespace: kustomize
  labels:
    app: fastapi
spec:
  replicas:
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: shubha1997/fast_api_app:8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: test-pvc-datascientest
