kustomize_fastapi/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-fastapi-service
  namespace: kustomize
spec:
  type: NodePort
  selector:
    app: fastapi
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
